# OpenSfM

./: .clang-format  .coveragerc  .dir-locals.el  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ubuntu20  Dockerfile.ubuntu24  README.md  RELEASE.md  conda.yml  pyproject.toml  run_coverage.bash  setup.cfg  setup.py  update_conda_locks.sh
.github/: copilot-instructions.md
.github/scripts/: generate_coverage_badge.py
.github/workflows/: conda.yml  coverage.yml  docker_aliyun  docker_aliyun.yml  docker_ubuntu20.yml  docker_ubuntu24.yml
annotation_gui_gcp/: run_ba.py
badges/: coverage-summary.json
benchmark/: benchmark_example.json  compare.py  config.py  pipeline.py  run.py  workspace.py
configs/: aerial.yaml  object.yaml  terrestrial.yaml
doc/: benchmark.md  building.md  camera_coordinate_system.md  configuration.md  dataset.md  dense.md  dense_matching.md  geometry.md  georeferencing.md  ground_control_points.md  large_datasets.md  merging_notes.md  quality_report.md  quickstart.md  reconstruction.md  reporting.md  rig.md  sensor_database.md  troubleshooting.md  using.md
opensfm/: align.py  config.py  context.py  dataset.py  dataset_base.py  dense.py  dsm.py  exif.py  feature_loading.py  features.py  features_processing.py  geo.py  geometry.py  io.py  matching.py  multiview.py  pairs_selection.py  reconstruction.py  reconstruction_helpers.py  report.py  report_locale.py  stats.py  tracking.py  types.py  undistort.py
opensfm/actions/: compute_depthmaps.py  compute_dsm.py  compute_statistics.py  convert_gcp.py  correct_rolling_shutter.py  crop_reconstruction.py  dense_clustering.py  dense_equalize.py  dense_merging.py  export_report.py  export_rerun.py  extract_geolocation.py  extract_metadata.py  fuse_depthmaps.py  reconstruct.py  rs_correct.py
opensfm/commands/: __init__.py  compute_depthmaps.py  compute_dsm.py  convert_gcp.py  correct_rolling_shutter.py  crop_reconstruction.py  dense_clustering.py  dense_equalize.py  dense_merging.py  export_report.py  extract_geolocation.py  extract_metadata.py  fuse_depthmaps.py  rs_correct.py
opensfm/data/: camera_calibration.yaml
opensfm/dense/: __init__.py  clustering.py  common.py  (+6 more)
opensfm/src/lib/: CMakeLists.txt
opensfm/src/lib/bundle/: CMakeLists.txt  bundle_adjuster.h  classic_sigma_reweighting.h  irls_helpers.h  irls_solver.h  mad_sigma_reweighting.h  mixture_reweighting.h  reconstruction_alignment.h
opensfm/src/lib/bundle/data/: bias.h  parameter_mask.h  point.h
opensfm/src/lib/bundle/python/: pybind.cc
opensfm/src/lib/bundle/src/: bundle_adjuster.cc  classic_sigma_reweighting.cc  irls_helpers.cc  irls_solver.cc  mad_sigma_reweighting.cc  mixture_reweighting.cc
opensfm/src/lib/bundle/test/: bundle_adjuster_api_test.cc  bundle_adjuster_scene_test.cc  density_ratio_test.cc  irls_helpers_test.cc  reweighting_test.cc
opensfm/src/lib/dense/: CMakeLists.txt  clean.md  cleaner.h  cluster.h  dense.md  depthmap_bind.h  diffusion_opencl_kernels.h  dsm_opencl_kernels.h  estimator.h  fuser.h  opencl_kernels.h  opencl_utils.h  pydense.pyi  raw.md  svo.h  svo_fuser.h  svo_opencl.h  svo_opencl_kernels.h  svo_opencl_kernels.h.bak
opensfm/src/lib/dense/python/: pybind.cc
opensfm/src/lib/dense/src/: cleaner.cc  cluster_estimator.cc  estimator.cc  fuser.cc  svo.cc  svo_fuser.cc  svo_opencl.cc
opensfm/src/lib/dense/test/: depthmap_test.cc
opensfm/src/lib/features/: CMakeLists.txt  dspsift.h  matching_opencl.h  matching_opencl_kernels.h
opensfm/src/lib/features/python/: pybind.cc
opensfm/src/lib/features/src/: dspsift.cc  matching_opencl.cc
opensfm/src/lib/features/test/: matching_opencl_test.cc  vlad_test.cc
opensfm/src/lib/foundation/: CMakeLists.txt  interpolation.h  logging.h  memory.h  newton_raphson.h  threading.h  union_find.h
opensfm/src/lib/foundation/src/: logging.cc  memory.cc
opensfm/src/lib/foundation/test/: interpolation_numeric_test.cc
opensfm/src/lib/geo/: CMakeLists.txt  crs_transform.h
opensfm/src/lib/geo/src/: crs_transform.cc
opensfm/src/lib/geo/test/: crs_transform_test.cc
opensfm/src/lib/geometry/: CMakeLists.txt  camera_instances.h  camera_utils.h  rotation.h  transformations_functions.h  triangulation.h
opensfm/src/lib/geometry/python/: pybind.cc
opensfm/src/lib/geometry/src/: rotation.cc  triangulation.cc
opensfm/src/lib/geometry/test/: absolute_pose_test.cc  essential_pose_test.cc  rotation_test.cc  similarity_test.cc  triangulation_test.cc
opensfm/src/lib/map/: CMakeLists.txt  defines.h  gcp_io.h  geo_io.h  ground_control_points.h  landmark.h  map.h  observation.h  observation_pool.h  pymap.pyi  shot.h  tracks_manager.h
opensfm/src/lib/map/python/: pybind.cc
opensfm/src/lib/map/src/: gcp_io.cc  geo_io.cc  landmark.cc  map.cc  shot.cc  tracks_manager.cc
opensfm/src/lib/map/test/: gcp_io_test.cc  geo_io_test.cc  map_test.cc  tracks_manager_test.cc
opensfm/src/lib/pointcloud/: CMakeLists.txt  half_float.h  las_io.cc  las_io.h  laz_io.cc  laz_io.h  morton.h  octree_builder.cc  octree_builder.h  octree_internal.h  ooc_octree.cc  ply_io.cc  ply_io.h  point_cloud_io.cc  point_cloud_io.h  tile_format.h  tile_io.cc  tile_io.h
opensfm/src/lib/pointcloud/python/: pybind.cc
opensfm/src/lib/pointcloud/test/: half_float_test.cc  morton_test.cc  tile_io_test.cc
opensfm/src/lib/robust/: CMakeLists.txt  absolute_pose_known_rotation_model.h  absolute_pose_model.h  essential_model.h  line_model.h  relative_pose_model.h  relative_rotation_model.h  triangulation_model.h
opensfm/src/lib/robust/src/: similarity_model.cc  triangulation_model.cc
opensfm/src/lib/robust/test/: line_model_test.cc  scorer_test.cc
opensfm/src/lib/sfm/: CMakeLists.txt  ba_helpers.h  dense_helpers.h  pysfm.pyi  reconstruction_grower.h  retriangulation.h  tracks_helpers.h
opensfm/src/lib/sfm/python/: pybind.cc
opensfm/src/lib/sfm/src/: ba_helpers.cc  dense_helpers.cc  map_helpers.cc  reconstruction_grower.cc  retriangulation.cc  tracks_helpers.cc
opensfm/src/lib/sfm/test/: map_helpers_test.cc  tracks_helpers_test.cc
(+40 files in other folders)
